# FairnessBondedUtility

./: pyproject.toml
.mplconfig/: fontlist-v390.json
src/fbu/: __init__.py  fbu.py  metrics.py  visualization.py
tests/: test_fbu.py  test_metrics.py
