[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fbu"
version = "0.1.0"
description = "Fairness Bonded Utility — unified fairness-performance trade-off metric"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "scikit-learn>=1.2",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/fbu"]
